# csr

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: FindEpoxy.cmake  FindGLFW.cmake
code/: CMakeLists.txt
code/applets/: CMakeLists.txt
code/applets/basic/: CMakeLists.txt
code/applets/basic/hello_screens/: CMakeLists.txt  README.md  main.c
code/applets/main/model_viewer/: CMakeLists.txt  main.c  model_viewer.c  model_viewer.h  model_viewer_input.c  renderer.c  renderer.h  renderer_conf.h  renderer_priv.h  resources.h  rsx.c  rsx.h  rsx_commands.c  rsx_conf.h  rsx_priv.h  rsx_resources.c  scene.c  scene.h  scene_priv.h
code/applets/main/model_viewer/renderer/: common.h  material.h  mesh.h  rcpu.c  rcpu.h  rcpu_cache.c  rcpu_cache_shaders.c  rcpu_priv.h  rgpu.c  rgpu.h  rgpu_cache.c  rgpu_priv.h  rgpu_shaders.h
code/applets/main/model_viewer/resources/: camera.c  camera.h  camera_ctl.h  model.h  model_ctl.h
code/applets/main/model_viewer/rsx/: common.h  rcpu.c  rcpu.h  rcpu_cache.c  rcpu_cache_shaders.c  rcpu_priv.h  rgpu.c  rgpu.h  rgpu_priv.h
code/applets/main/model_viewer/scene/: camera.c  camera.h  camera_ctl.h  conf.h  light.h  model.c  model.h  model_import_gltf.c  model_import_obj.c  model_priv.h
code/applets/main/model_viewer/ui/: register.c  view_camera.c  view_model.c  view_renderer.c  view_rsx.c  widgets.c
code/applets/xgl/xgl_hello_cube/: CMakeLists.txt  main.c  main.h  resources.c  ui.c
code/apps/: CMakeLists.txt
code/apps/csr_app/: CMakeLists.txt  application.c  application.h  main.c
code/apps/csr_app/frontend/: ctx_applet.c  ctx_application.c  view_applet_db.c  view_application_settings.c  view_console.c  view_log_messages.c  view_settings.c  workspace.c
code/apps/csr_app/frontend/view_settings/: page_frontend.c  page_kernel.c
code/examples/: CMakeLists.txt
code/examples/hello_strings/: CMakeLists.txt
code/libcsr/: CMakeLists.txt
code/libcsr/include/csr/: applet.h  kernel.h  platform.h
code/libcsr/include/csr/applet/: aio.h  applet.h  applet_db.h  applet_mgr.h  applet_plugin.h  applet_priv.h  applet_state.h
code/libcsr/include/csr/core/: base.h  clock.h  config.h  file_io.h  hashmap.h  list.h  math.h  memory.h  object_pool.h  path.h  stopwatch.h  vector.h
code/libcsr/include/csr/core/base/: assert.h  common.h  guid.h  macros.h  memory.h  result.h  string.h  types.h  uuid.h  variant.h  version.h
code/libcsr/include/csr/core/math/: aabb.h  mat2x.h  mat3x.h  mat4x.h  orbit.h  quat.h  rect.h  transform.h  utils.h  vec2.h  vec3.h  vec4.h
code/libcsr/include/csr/core/memory/: arena.h  arena_priv.h
code/libcsr/include/csr/graphics/: color.h  color32.h  pixelbuffer.h  screen.h  screen_priv.h  screen_surface.h  softgl.h  ui.h  xgl.h
code/libcsr/include/csr/graphics/softgl/: common.h  driver.h  driver_priv.h
code/libcsr/include/csr/graphics/ui/: common.h  ctx.h  imgui.h  theme.h  theme_priv.h  ui.h  ui_priv.h  workspace.h  workspace_priv.h
code/libcsr/include/csr/graphics/ui/imgui/: cimgui.h  cimgui_pimpl.h  cimgui_priv.h
code/libcsr/include/csr/graphics/xgl/: common.h  driver.h  driver_pimpl.h  driver_priv.h
code/libcsr/include/csr/kernel/: env_vars.h  events.h  kernel.h  kernel_priv.h  kio.h  log_db.h  mainloop.h  mainloop_api.h  screen.h  video_mode.h
code/libcsr/include/csr/kernel/events/: event.h  event_bus.h
code/libcsr/include/csr/kernel/service/: audio.h  audio_priv.h  core.h  core_priv.h  vfs.h  vfs_priv.h  video.h  video_priv.h
code/libcsr/include/csr/platform/: common.h  hid.h  platform.h  platform_pimpl.h  platform_priv.h
code/libcsr/include/csr/platform/hid/: gamepad.h  keyboard.h  mouse.h
code/libcsr/src/applet/: CMakeLists.txt  aio.c  applet.c  applet_db.c  applet_mgr.c  applet_plugin.c  applet_state.c
code/libcsr/src/core/: CMakeLists.txt  clock.c  config.c  file_io.c  hashmap.c  list.c  object_pool.c  path.c  stopwatch.c  vector.c
code/libcsr/src/core/base/: guid.c  string.c  string_printf.c  version.c
code/libcsr/src/core/math/: transform.c
code/libcsr/src/core/memory/: arena.c  arena_priv.c
code/libcsr/src/graphics/: CMakeLists.txt  pixelbuffer.c  screen.c  screen_surface.c
code/libcsr/src/graphics/softgl/: common.h  gp.h  gp_input_assembler.c  gp_primitives.c  gp_primitives_clipper.c  gp_primitives_rasterizer.c  gp_primitives_rasterizer_triangle.c  gp_vertices.c  gp_vertices_ia.c  softgl_commands.c  softgl_device.c  softgl_driver.c  triangle.h
code/libcsr/src/graphics/ui/: CMakeLists.txt  cimgui_priv.c  ctx.c  ui.c  ui_properties.c  ui_themes.c  ui_view_screen.c  workspace.c
code/libcsr/src/graphics/ui/imgui_backends/: CMakeLists.txt
code/libcsr/src/graphics/ui/imgui_backends/platform/: CMakeLists.txt
code/libcsr/src/graphics/ui/imgui_backends/platform/glfw/: CMakeLists.txt  glfw.c
code/libcsr/src/graphics/ui/imgui_backends/platform/null/: CMakeLists.txt  null.c
code/libcsr/src/graphics/ui/imgui_backends/renderer/: CMakeLists.txt
code/libcsr/src/graphics/ui/imgui_backends/renderer/null/: CMakeLists.txt  null.c
code/libcsr/src/graphics/ui/imgui_backends/renderer/opengl3/: CMakeLists.txt  opengl3.c
code/libcsr/src/graphics/ui/theme/: csr_graphite.c  imgui_dark.c
code/libcsr/src/graphics/xgl/: CMakeLists.txt  common.h  xgl_commands.c  xgl_device.c  xgl_driver.c
code/libcsr/src/graphics/xgl/backend/: CMakeLists.txt
code/libcsr/src/graphics/xgl/backend/opengl/: CMakeLists.txt  common.h  error_handling.h  opengl_commands.c  opengl_device.c  opengl_driver.c
code/libcsr/src/kernel/: CMakeLists.txt  env_vars.c  event_bus.c  kernel.c  kio.c  log_db.c  mainloop.c  mainloop_api.c  video_mode.c
code/libcsr/src/kernel/service/: ksrv_audio.c  ksrv_core.c  ksrv_vfs.c  ksrv_video.c
code/libcsr/src/platform/: CMakeLists.txt  platform.c
code/libcsr/src/platform/backend/: CMakeLists.txt
code/libcsr/src/platform/backend/glfw/: CMakeLists.txt  hid_mappings.c  platform_glfw3.c
code/tests/: CMakeLists.txt
resources/shaders/: common.inc.glsl  vertex_color.fs.glsl  vertex_color.vs.glsl  vertex_color_no_ia.vs.glsl
(+32 files in other folders)
